Add PIT mutation testing plugin configuration to pom.xml